fix(fix the offset problem when the divider is vertical): remove transformY,use align-items: center
affects: @varlet/ui

--- a/packages/varlet-ui/src/divider/divider.less
+++ b/packages/varlet-ui/src/divider/divider.less
@@ -31,7 +31,6 @@
     padding: var(--divider-text-margin);
     border-top: none;
     border-left: 1px solid var(--divider-color);
-    transform: translateY(-10%);
   }
 
   &--inset {
